// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Billing Banners:  ManuallyBilledBanner should render with pending subscription 1`] = `
<Banner
  action={null}
  status="info"
  title="Your current whoa plan includes 123 emails per month"
>
  <p>
    You're scheduled to switch to the 
    omg
     plan on 
    Oct 05, 2020
    . If you have any questions, please 
    <a
      href="mailto:support@sparkpost.com"
    >
      contact support
    </a>
    .
  </p>
</Banner>
`;

exports[`Billing Banners:  ManuallyBilledBanner should render with subscription 1`] = `
<Banner
  action={
    Object {
      "Component": [Function],
      "content": "Enable Automatic Billing",
      "to": "/account/billing/plan",
    }
  }
  status="info"
  title="Your current whoa plan includes 123 emails per month"
>
  <p>
    To make changes to your plan, billing information, or addons, 
    <a
      href="mailto:support@sparkpost.com"
    >
      contact support
    </a>
    .
  </p>
  <p>
    Enable automatic billing to self-manage your plan and add-ons.
  </p>
</Banner>
`;

exports[`Billing Banners:  PendingPlanBanner should render with pending_subscription 1`] = `
<Banner
  status="info"
  title="Pending Plan Change"
>
  <p>
    You're scheduled to switch to the 
     plan on 
    Oct 05, 2020
    , and can't update your plan until that switch happens.
  </p>
  <p>
    If you have any questions, please 
    <a
      href="mailto:support@sparkpost.com"
    >
      contact support
    </a>
    .
  </p>
</Banner>
`;

exports[`Billing Banners:  SuspendedBanner should render with isSuspendedForBilling 1`] = `
<Banner
  status="danger"
  title="Your account has been suspended due to a billing problem"
>
  <p>
    We sent an email notification to your current billing contact email address (
    tst
    ). To reactivate your account and pay your outstanding balance due, please update your payment information below.
  </p>
  <p>
    If you have any questions, please 
    <a
      href="mailto:billing@sparkpost.com"
    >
      contact us
    </a>
    .
  </p>
</Banner>
`;

exports[`Billing Banners:  renders Enterprise banner 1`] = `
<Banner
  action={
    Object {
      "content": "Contact Us",
      "external": true,
      "to": "https://www.sparkpost.com/contact-enterprise/",
    }
  }
  status="default"
  title="Enterprise"
>
  <p>
    Enterprise-grade guarantees and SLAs across email, push, and SMS - manage, analyzed, and reported from a single console.
  </p>
  <ul>
    <li>
      The industry's best uptime SLAs with service credits
    </li>
    <li>
      Guaranteed burst rates
    </li>
    <li>
      Push notifications and SMS messaging
    </li>
    <li>
      Single sign-on support
    </li>
    <li>
      Support for iOS universal links
    </li>
  </ul>
</Banner>
`;

exports[`Billing Banners:  renders Premium banner 1`] = `
<Banner
  action={
    Object {
      "content": "Contact Us",
      "external": true,
      "to": "https://www.sparkpost.com/contact-premium/",
    }
  }
  status="default"
  title="Premium Addon Plan"
>
  <p>
    Technical and deliverability account management - full service support on a first name basis.
  </p>
  <ul>
    <li>
      Dedicated Technical Account Manager
    </li>
    <li>
      Proactive deliverability reporting, planning & reviews
    </li>
    <li>
      Global ISP relations and mediation
    </li>
    <li>
      Deliverability data analysis and guidance with 250ok
    </li>
  </ul>
</Banner>
`;
